RESOLVED FIXED15919
XSLTProcessor.transformToFragment creates an extra not defined TEXT_NODE at the end
https://bugs.webkit.org/show_bug.cgi?id=15919
Summary XSLTProcessor.transformToFragment creates an extra not defined TEXT_NODE at t...
Sjoerd Mulder
Reported 2007-11-09 06:17:43 PST
XSLTProcessor.transformToFragment creates an extra not defined TEXT_NODE at the end. All other browsers dont (IE / Fx / Op) Testcase:
Attachments
Testcase (1.72 KB, text/html)
2007-11-09 06:17 PST, Sjoerd Mulder
no flags
proposed fix (11.96 KB, patch)
2007-11-22 23:38 PST, Alexey Proskuryakov
mjs: review+
Sjoerd Mulder
Comment 1 2007-11-09 06:17:57 PST
Created attachment 17154 [details] Testcase
Alexey Proskuryakov
Comment 2 2007-11-10 10:29:09 PST
Filed <http://bugzilla.gnome.org/show_bug.cgi?id=495668>. I think we can implement a simple workaround, but I'd like to wait for feedback from libxslt developers a little.
Alexey Proskuryakov
Comment 3 2007-11-22 23:38:46 PST
Created attachment 17455 [details] proposed fix I haven't heard from libxslt developers yet.
Maciej Stachowiak
Comment 4 2007-11-24 19:24:27 PST
Comment on attachment 17455 [details] proposed fix r=me, we shouldn't wait for the libxslt bug to be fixed, I think.
Alexey Proskuryakov
Comment 5 2007-11-25 01:45:53 PST
Committed revision 28014.
Lucas Forschler
Comment 6 2019-02-06 09:03:00 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note You need to log in before you can comment on or make changes to this bug.