        Reviewed by Maciej.

http://bugs.webkit.org/show_bug.cgi?id=15919
        XSLTProcessor.transformToFragment creates an extra not defined TEXT_NODE at the end

        Test: fast/xsl/extra-lf-at-end.html

        * xml/XSLTProcessor.cpp:
        (WebCore::writeToVector): Changed to use Vector to avoid slow String::apend().
        (WebCore::saveResultToString): Remove trailing line feed if present.



Canonical link: https://commits.webkit.org/21933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28014 268f45cc-cd09-0410-ab3c-d52691b4dbfc